# serializer version: 1
# name: test_media_player[media_player.test_media_player-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.test_media_player',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Media player',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.SPEAKER: 'speaker'>,
    'original_icon': None,
    'original_name': 'Media player',
    'platform': 'tessie',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'media',
    'unique_id': 'VINVINVIN-media',
    'unit_of_measurement': None,
  })
# ---
# name: test_media_player[media_player.test_media_player-paused]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Media player',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 0>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.2258032258064516,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_media_player',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_media_player[media_player.test_media_player-playing]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speaker',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Media player',
      <MediaPlayerEntityStateAttribute.MEDIA_ALBUM_NAME: 'media_album_name'>: 'Album',
      <MediaPlayerEntityStateAttribute.MEDIA_ARTIST: 'media_artist'>: 'Artist',
      <MediaPlayerEntityStateAttribute.MEDIA_DURATION: 'media_duration'>: 60.0,
      <MediaPlayerEntityStateAttribute.MEDIA_PLAYLIST: 'media_playlist'>: 'Playlist',
      <MediaPlayerEntityStateAttribute.MEDIA_POSITION: 'media_position'>: 30.0,
      <MediaPlayerEntityStateAttribute.MEDIA_TITLE: 'media_title'>: 'Song',
      <MediaPlayerEntityStateAttribute.INPUT_SOURCE: 'source'>: 'Spotify',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 0>,
      <MediaPlayerEntityStateAttribute.MEDIA_VOLUME_LEVEL: 'volume_level'>: 0.2258032258064516,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.test_media_player',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'playing',
  })
# ---
